DEBUG 9057: Import all packages in test-app model
This is a partial revert of https://git.opendaylight.org/gerrit/59955

Change-Id: Ibe941b22000f52664a73d98d3dafae4ce6bac494
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/opendaylight/md-sal/samples/clustering-test-app/model/pom.xml
+++ b/opendaylight/md-sal/samples/clustering-test-app/model/pom.xml
@@ -25,6 +25,7 @@
                     <configuration>
                         <instructions>
                             <Bundle-Name>org.opendaylight.controller.sal-clustering-it-model</Bundle-Name>
+                            <Import-Package>*</Import-Package>
                         </instructions>
                     </configuration>
                 </plugin>
