--- a/opendaylight/config/threadpool-config-impl/pom.xml
+++ b/opendaylight/config/threadpool-config-impl/pom.xml
@@ -54,6 +54,9 @@
       <plugin>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yang-maven-plugin</artifactId>
+        <!-- Versions from yangtools-atrifacts do not apply to plugins
+             https://stackoverflow.com/a/11258114 -->
+        <version>1.2.0-SNAPSHOT</version>
       </plugin>
     </plugins>
   </build>
