--- a/opendaylight/md-sal/samples/clustering-test-app/provider/pom.xml
+++ b/opendaylight/md-sal/samples/clustering-test-app/provider/pom.xml
@@ -43,6 +43,14 @@
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-common-util</artifactId>
         </dependency>
+        <!-- We need to depend on controller broker directly,
+             otherwise sal-distributed-datastore pulls in broker from Mdsal,
+             which is slightly different, which currently leads to Bug 9057
+        -->
+        <dependency>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>sal-broker-impl</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>sal-distributed-datastore</artifactId>
