Fix checkstyle issues to enforce it
Fix checkstyle issues to enforce it.

Change-Id: Ic1c79114162d0c9772479e98df628d09daaa623b
Signed-off-by: David Suarez <david.suarez.fuentes@gmail.com>

--- a/opendaylight/config/config-persister-directory-xml-adapter/pom.xml
+++ b/opendaylight/config/config-persister-directory-xml-adapter/pom.xml
@@ -69,6 +69,13 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <propertyExpansion>checkstyle.violationSeverity=error</propertyExpansion>
+        </configuration>
+      </plugin>
+      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
