Bug 9189: Introduce config-feature-parent
Also add odl-config-parent-dependencies feature.

Change the parent (from single-feature-parent)
in feature definitions containing bundles built with config-parent.

Change-Id: I898abdc6b62b6e76f528b58b78f3f5053d32acb7
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/features/config/pom.xml
+++ b/features/config/pom.xml
@@ -28,6 +28,7 @@
         <module>odl-config-core</module>
         <module>odl-config-manager</module>
         <module>odl-config-netty-config-api</module>
+        <module>odl-config-parent-dependencies</module>
     </modules>
 
     <scm>
