--- a/features/mdsal/odl-mdsal-clustering-commons/pom.xml
+++ b/features/mdsal/odl-mdsal-clustering-commons/pom.xml
@@ -12,9 +12,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>single-feature-parent</artifactId>
-        <version>2.0.4</version>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>config-feature-parent</artifactId>
+        <version>0.8.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
