--- a/features/pom.xml
+++ b/features/pom.xml
@@ -14,6 +14,7 @@
   <packaging>pom</packaging>
 
   <modules>
+    <module>config-feature-parent</modules>
     <module>config</module>
     <module>config-persister</module>
     <module>config-netty</module>
