--- a/features/mdsal/odl-mdsal-remoterpc-connector/pom.xml
+++ b/features/mdsal/odl-mdsal-remoterpc-connector/pom.xml
@@ -15,7 +15,7 @@
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
         <version>2.0.4</version>
-        <relativePath/>
+        <relativePath>../../config-feature-parent</relativePath>
     </parent>
 
     <groupId>org.opendaylight.controller</groupId>
