--- a/features/mdsal/odl-mdsal-distributed-datastore/pom.xml
+++ b/features/mdsal/odl-mdsal-distributed-datastore/pom.xml
@@ -12,10 +12,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.opendaylight.odlparent</groupId>
-        <artifactId>single-feature-parent</artifactId>
-        <version>2.0.5</version>
-        <relativePath/>
+        <groupId>org.opendaylight.controller</groupId>
+        <artifactId>config-feature-parent</artifactId>
+        <version>0.8.0-SNAPSHOT</version>
+        <relativePath>../../config-feature-parent</relativePath>
     </parent>
 
     <groupId>org.opendaylight.controller</groupId>
