--- a/features/mdsal/odl-mdsal-broker-local/pom.xml
+++ b/features/mdsal/odl-mdsal-broker-local/pom.xml
@@ -43,7 +43,7 @@
             <dependency>
                 <groupId>org.opendaylight.yangtools</groupId>
                 <artifactId>yangtools-artifacts</artifactId>
-                <version>2.0.0-SNAPSHOT</version>
+                <version>1.2.0</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
