--- a/opendaylight/config/config-parent/pom.xml
+++ b/opendaylight/config/config-parent/pom.xml
@@ -24,7 +24,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <properties>
     <config.version>0.8.0-SNAPSHOT</config.version>
     <mdsal.version>1.7.0-SNAPSHOT</mdsal.version>
-    <yangtools.version>2.0.0-SNAPSHOT</yangtools.version>
+    <yangtools.version>1.2.0</yangtools.version>
     <jmxGeneratorPath>${project.build.directory}/generated-sources/config-binding</jmxGeneratorPath>
     <config.file>src/main/config/default-config.xml</config.file>
   </properties>
