--- a/opendaylight/md-sal/sal-common-testutil/pom.xml
+++ b/opendaylight/md-sal/sal-common-testutil/pom.xml
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.opendaylight.yangtools</groupId>
       <artifactId>testutils</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
