BUG-9218: package controller inventory model
Downstreams are pulling in model-inventory artifact because they
do not have a feature where to pull it from. Provide that feature as
odl-mdsal-model-inventory.

Change-Id: I973830ff5b334ea544621f0a8ffc53557439b9c0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/mdsal/odl-message-bus-collector/pom.xml
+++ b/features/mdsal/odl-message-bus-collector/pom.xml
@@ -42,14 +42,14 @@
     <dependencies>
         <!-- FIXME: Bug 4202: Switch to MD-SAL provided odl-mdsal-binding-base -->
         <dependency>
-            <groupId>org.opendaylight.controller.model</groupId>
-            <artifactId>model-inventory</artifactId>
-            <version>1.7.0-SNAPSHOT</version>
+            <groupId>org.opendaylight.controller</groupId>
+            <artifactId>odl-mdsal-model-inventory</artifactId>
+            <type>xml</type>
+            <classifier>features</classifier>
         </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>odl-mdsal-broker</artifactId>
-            <version>${project.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
