--- a/opendaylight/md-sal/mdsal-artifacts/pom.xml
+++ b/opendaylight/md-sal/mdsal-artifacts/pom.xml
@@ -362,6 +362,13 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
+                <artifactId>odl-mdsal-model-inventory</artifactId>
+                <version>${project.version}</version>
+                <type>xml</type>
+                <classifier>features</classifier>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
                 <artifactId>odl-toaster</artifactId>
                 <version>${project.version}</version>
                 <type>xml</type>
