--- a/features/mdsal/features-mdsal/pom.xml
+++ b/features/mdsal/features-mdsal/pom.xml
@@ -82,6 +82,13 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
+            <artifactId>odl-mdsal-model-inventory</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>odl-mdsal-remoterpc-connector</artifactId>
             <version>${project.version}</version>
             <type>xml</type>
