--- a/features/mdsal/pom.xml
+++ b/features/mdsal/pom.xml
@@ -32,6 +32,7 @@
         <module>odl-mdsal-clustering-commons</module>
         <module>odl-mdsal-common</module>
         <module>odl-mdsal-distributed-datastore</module>
+        <module>odl-mdsal-model-inventory</module>
         <module>odl-mdsal-remoterpc-connector</module>
         <module>odl-message-bus-collector</module>
         <module>odl-toaster</module>
