--- a/opendaylight/md-sal/sal-cluster-admin-impl/pom.xml
+++ b/opendaylight/md-sal/sal-cluster-admin-impl/pom.xml
@@ -73,11 +73,11 @@
     <!-- Akka -->
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-actor_${scala.version}</artifactId>
+      <artifactId>akka-actor_2.12</artifactId>
     </dependency>
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-testkit_${scala.version}</artifactId>
+      <artifactId>akka-testkit_2.12</artifactId>
       <scope>test</scope>
     </dependency>
 
