--- a/opendaylight/md-sal/sal-dummy-distributed-datastore/pom.xml
+++ b/opendaylight/md-sal/sal-dummy-distributed-datastore/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>bundle-parent</artifactId>
-    <version>2.0.5</version>
+    <version>3.0.1</version>
     <relativePath/>
   </parent>
 
@@ -33,38 +33,38 @@
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-actor_${scala.version}</artifactId>
+      <artifactId>akka-actor_2.12</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-cluster_${scala.version}</artifactId>
+      <artifactId>akka-cluster_2.12</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-persistence_${scala.version}</artifactId>
+      <artifactId>akka-persistence_2.12</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-remote_${scala.version}</artifactId>
+      <artifactId>akka-remote_2.12</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-testkit_${scala.version}</artifactId>
+      <artifactId>akka-testkit_2.12</artifactId>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-slf4j_${scala.version}</artifactId>
+      <artifactId>akka-slf4j_2.12</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.typesafe.akka</groupId>
-      <artifactId>akka-osgi_${scala.version}</artifactId>
+      <artifactId>akka-osgi_2.12</artifactId>
     </dependency>
 
     <dependency>
