--- a/features/mdsal/odl-mdsal-common/pom.xml
+++ b/features/mdsal/odl-mdsal-common/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
             <artifactId>odl-yangtools-yang-data</artifactId>
-            <version>1.2.0</version>
+            <version>2.0.0-SNAPSHOT</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
