--- a/opendaylight/md-sal/sal-connector-api/pom.xml
+++ b/opendaylight/md-sal/sal-connector-api/pom.xml
@@ -18,7 +18,7 @@
       <dependency>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-artifacts</artifactId>
-        <version>1.2.0</version>
+        <version>2.0.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
