--- a/opendaylight/blueprint/pom.xml
+++ b/opendaylight/blueprint/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>bundle-parent</artifactId>
-    <version>2.0.5</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -41,7 +41,7 @@
       <dependency>
         <groupId>org.opendaylight.yangtools</groupId>
         <artifactId>yangtools-artifacts</artifactId>
-        <version>1.2.0</version>
+        <version>2.0.0-SNAPSHOT</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
