--- a/opendaylight/commons/liblldp/pom.xml
+++ b/opendaylight/commons/liblldp/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>bundle-parent</artifactId>
-    <version>2.0.5</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
