DO NOT MERGE: bump yangtools to 2.0.0-SNAPSHOT
This bumps odlparent to 3.0.0 and yangtools to 2.0.0-SNAPSHOT.

Change-Id: I24f9997c2ec22861e674b74fb01d43f783e3dbc1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>

--- a/features/mdsal/odl-mdsal-common/pom.xml
+++ b/features/mdsal/odl-mdsal-common/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>2.0.5</version>
+        <version>3.0.0</version>
         <relativePath/>
     </parent>
 
@@ -28,8 +28,8 @@
     <dependencies>
         <dependency>
             <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-yang-data</artifactId>
-            <version>1.2.0</version>
+            <artifactId>odl-yangtools-data</artifactId>
+            <version>2.0.0</version>
             <type>xml</type>
             <classifier>features</classifier>
         </dependency>
