InfraUtils DiagStatus integration for datastore
SyncStatus attribute value of OperDS as well as configDS
can be used to determine health of DataStore as a Service,
and the same can be pulled by DiagStatus module to have a
common place where all service status can be registered.

Change-Id: I8a910a81f663f1ae124071c6bdd692719ae75032
Signed-off-by: Faseela K <faseela.k@ericsson.com>

--- a/features/mdsal/odl-mdsal-broker/pom.xml
+++ b/features/mdsal/odl-mdsal-broker/pom.xml
@@ -53,6 +53,13 @@
             <classifier>config</classifier>
         </dependency>
         <dependency>
+            <groupId>org.opendaylight.infrautils</groupId>
+            <artifactId>odl-infrautils-diagstatus</artifactId>
+            <version>1.3.0-SNAPSHOT</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
             <!-- finalname="${config.configfile.directory}/${config.clustered-entity-ownership.configfile}" -->
             <groupId>${project.groupId}</groupId>
             <artifactId>sal-clustering-config</artifactId>
