--- a/opendaylight/config/config-parent/pom.xml
+++ b/opendaylight/config/config-parent/pom.xml
@@ -25,6 +25,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <config.version>0.8.0-SNAPSHOT</config.version>
     <mdsal.version>1.7.0-SNAPSHOT</mdsal.version>
     <yangtools.version>1.2.0</yangtools.version>
+    <infrautils.version>1.3.0-SNAPSHOT</infrautils.version>
     <jmxGeneratorPath>${project.build.directory}/generated-sources/config-binding</jmxGeneratorPath>
     <config.file>src/main/config/default-config.xml</config.file>
   </properties>
