--- a/features/mdsal/odl-mdsal-clustering-commons/pom.xml
+++ b/features/mdsal/odl-mdsal-clustering-commons/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.opendaylight.odlparent</groupId>
         <artifactId>single-feature-parent</artifactId>
-        <version>2.0.5</version>
+        <version>2.0.6-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
