--- a/opendaylight/archetypes/pom.xml
+++ b/opendaylight/archetypes/pom.xml
@@ -15,12 +15,20 @@
   <packaging>pom</packaging>
 
   <properties>
-    <!-- TODO Bump maven-archetype-plugin version in odlparent instead of here: -->
+    <!-- TODO Remove this property when we are on odlparent 3.0.0 which provides this for us: -->
     <maven.archetype.version>3.0.1</maven.archetype.version>
-    <!-- TODO Figure out why SFT fails on archetype self test with:
-         ArtifactResolutionException: Error resolving artifact org.opendaylight.odlparent:opendaylight-karaf-empty:zip:2.0.5 -->
-    <archetype.test.skip>true</archetype.test.skip>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <!-- Required for https://jira.opendaylight.org/browse/CONTROLLER-1799
+           but this is only half of the solution; the other half is setting org.ops4j.pax.url.mvn.localRepository -->
+      <groupId>org.opendaylight.odlparent</groupId>
+      <artifactId>opendaylight-karaf-empty</artifactId>
+      <version>2.0.5</version>
+      <type>zip</type>
+    </dependency>
+  </dependencies>
 
   <build>
     <extensions>
@@ -42,7 +50,6 @@
       </plugin>
       <plugin>
         <artifactId>maven-help-plugin</artifactId>
-        <version>2.2</version>
         <configuration>
           <output>${project.build.directory}/effective-settings.xml</output>
         </configuration>
@@ -58,6 +65,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-archetype-plugin</artifactId>
+        <!-- TODO Remove this version when we are on odlparent 3.0.0 which fixes this for us: -->
         <version>${maven.archetype.version}</version>
         <configuration>
           <settingsFile>${project.build.directory}/effective-settings.xml</settingsFile>
