Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -10,4 +10,4 @@
 	mergeContent = true
 	action = rebase if necessary
 [allowSuperproject "releng/autorelease"]
-	matching = refs/heads/master:refs/heads/master
+	matching = refs/heads/stable/beryllium:refs/heads/stable/beryllium
