Added superproject subscription during upgrade

--- a/project.config
+++ b/project.config
@@ -9,3 +9,5 @@
 [submit]
 	mergeContent = true
 	action = rebase if necessary
+[allowSuperproject "releng/autorelease"]
+	matching = refs/heads/master:refs/heads/master
