Rename config 'test' in sal-distributed-datastore/src/test/resources/application.conf to 'common'.
When using such maven commands as 'mvn test -Dtest=ShardManagerTest', config 'test'
read from sal-distributed-datastore/src/test/resources/application.conf will be overrided
by Java command line option '-Dtest=ShardManagerTest' to be 'ShardManagerTest'.
And so all test cases in ShardManagerTest will fail. So rename it to a more comfortable name.

Change-Id: I6c978b1b32cdd723b99e0c3e4e812f34cfc71a67
Signed-off-by: YIN Kangqian <yin.kangqian@zte.com.cn>

--- a/opendaylight/md-sal/sal-distributed-datastore/src/test/resources/application.conf
+++ b/opendaylight/md-sal/sal-distributed-datastore/src/test/resources/application.conf
@@ -25,7 +25,7 @@ bounded-mailbox {
   mailbox-push-timeout-time = 100ms
 }
 
-test {
+common {
   bounded-mailbox {
     mailbox-type = "org.opendaylight.controller.cluster.common.actor.MeteredBoundedMailbox"
     mailbox-capacity = 1000
