Do not inline javax.annotation in config-manager
as in If36ced7ad72b19d1240f49c3224ff65c29ee22a0: "We should not be
including a private copy of javax.annotation, as we do not need it."

This one was found by the odl.simple's ClasspathHellDuplicatesCheckRule:

>> jHades - scanning classpath for overlapping jars:

file:/home/vorburger/.m2/repository/org/opendaylight/controller/config-manager/0.8.0-SNAPSHOT/config-manager-0.8.0-SNAPSHOT.jar
overlaps with
file:/home/vorburger/.m2/repository/com/google/code/findbugs/annotations/3.0.0/annotations-3.0.0.jar
- total overlapping classes: 35 - same classloader ! This is an ERROR!

Change-Id: I8b11ed8de2b31aef5e8410f0673a2ed85017287e
Signed-off-by: Michael Vorburger <vorburger@redhat.com>

--- a/opendaylight/config/config-manager/pom.xml
+++ b/opendaylight/config/config-manager/pom.xml
@@ -80,8 +80,7 @@
         <configuration>
           <instructions>
             <Bundle-Activator>org.opendaylight.controller.config.manager.impl.osgi.ConfigManagerActivator</Bundle-Activator>
-            <Private-Package>org.opendaylight.controller.config.manager.*,
-              javax.annotation.*,</Private-Package>
+            <Private-Package>org.opendaylight.controller.config.manager.*</Private-Package>
             <Export-Package></Export-Package>
           </instructions>
         </configuration>
