--- a/features/mdsal/odl-mdsal-common/pom.xml
+++ b/features/mdsal/odl-mdsal-common/pom.xml
@@ -23,16 +23,9 @@
     <version>1.7.0-SNAPSHOT</version>
     <packaging>feature</packaging>
 
-    <name>OpenDaylight :: Config :: All</name>
+    <name>OpenDaylight :: MDSAL :: Common</name>
 
     <dependencies>
-        <dependency>
-            <groupId>org.opendaylight.yangtools</groupId>
-            <artifactId>odl-yangtools-data</artifactId>
-            <version>2.0.1</version>
-            <type>xml</type>
-            <classifier>features</classifier>
-        </dependency>
         <dependency>
             <groupId>org.opendaylight.controller</groupId>
             <artifactId>odl-config-api</artifactId>
