WIP: Bump to odlparent 3.0.3-SNAPSHOT
Change-Id: If015e2fcb5feb2b704b923fc08291569ba65e028
Signed-off-by: Stephen Kitt <skitt@redhat.com>

--- a/opendaylight/config/config-it-base/pom.xml
+++ b/opendaylight/config/config-it-base/pom.xml
@@ -20,7 +20,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <packaging>bundle</packaging>
 
   <properties>
-    <opendaylight.karaf.version>3.0.2</opendaylight.karaf.version>
+    <opendaylight.karaf.version>3.0.3-SNAPSHOT</opendaylight.karaf.version>
   </properties>
 
   <dependencyManagement>
