--- a/opendaylight/md-sal/mdsal-it-parent/pom.xml
+++ b/opendaylight/md-sal/mdsal-it-parent/pom.xml
@@ -12,7 +12,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>bundle-parent</artifactId>
-    <version>3.0.2</version>
+    <version>3.0.3-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -25,7 +25,7 @@ and is available at http://www.eclipse.org/legal/epl-v10.html
     <mdsal.version>1.7.0-SNAPSHOT</mdsal.version>
     <karaf.distro.groupId>org.opendaylight.odlparent</karaf.distro.groupId>
     <karaf.distro.artifactId>opendaylight-karaf-empty</karaf.distro.artifactId>
-    <karaf.distro.version>3.0.2</karaf.distro.version>
+    <karaf.distro.version>3.0.3-SNAPSHOT</karaf.distro.version>
     <karaf.distro.type>zip</karaf.distro.type>
     <karaf.keep.unpack>false</karaf.keep.unpack>
   </properties>
