--- a/opendaylight/archetypes/pom.xml
+++ b/opendaylight/archetypes/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.opendaylight.odlparent</groupId>
     <artifactId>odlparent</artifactId>
-    <version>3.0.2</version>
+    <version>3.0.3-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -20,7 +20,7 @@
            but this is only half of the solution; the other half is setting org.ops4j.pax.url.mvn.localRepository -->
       <groupId>org.opendaylight.odlparent</groupId>
       <artifactId>opendaylight-karaf-empty</artifactId>
-      <version>3.0.2</version>
+      <version>3.0.3-SNAPSHOT</version>
       <type>zip</type>
     </dependency>
   </dependencies>
